# tessera-cnn-example

./: .gitignore  README.md  animate_solar_farms.py  create_demo_data.py  create_umap_animation.py  evaluate.py  fetch_solar_farms.py  models.py  predict.py  predict_uk.py  prepare.py  pyproject.toml  run_uk_predictions.sh  train.py
animation_data/: README.md  index.html  umap_clustering.json
